<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.azurdiacristian.eddmail_android.Inicio">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tV_usuario"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_below="@+id/tV_usuario"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="147dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sp_categorias"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="223dp"
        android:layout_below="@+id/tV_usuario"
        android:layout_toStartOf="@+id/tV_usuario" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b_crear_categoria"
        android:id="@+id/b_categorias"
        android:layout_alignTop="@+id/sp_categorias"
        android:layout_alignEnd="@+id/tV_usuario"
        android:onClick="crear_categorias" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b_redactar_correo"
        android:id="@+id/b_correos"
        android:layout_alignTop="@+id/b_categorias"
        android:layout_toEndOf="@+id/b_categorias"
        android:layout_marginStart="57dp" />

</RelativeLayout>
