<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.azurdiacristian.eddmail_android.Crear_usuario"
    android:id="@+id/layout_crear_usuario">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/l_usuario"
        android:id="@+id/textView2"
        android:layout_marginTop="53dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/l_usuario"
        android:id="@+id/textView"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_alignBottom="@+id/eT_usuario2"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eT_usuario"
        android:width="400dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_alignTop="@+id/textView2"
        android:layout_toEndOf="@+id/textView2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eT_usuario2"
        android:width="400dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/textView3"
        android:layout_toEndOf="@+id/textView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eT_dominio"
        android:width="200dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="50dp"
        android:layout_alignTop="@+id/eT_usuario2"
        android:layout_toEndOf="@+id/eT_usuario2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eT_extension"
        android:width="200dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_alignTop="@+id/eT_dominio"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sp_dominios"
        android:layout_alignBottom="@+id/eT_usuario"
        android:layout_alignStart="@+id/eT_dominio" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mensaje_opcion"
        android:id="@+id/textView3"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="47dp"
        android:layout_below="@+id/eT_usuario"
        android:layout_toStartOf="@+id/eT_extension" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/l_dominio"
        android:id="@+id/textView4"
        android:layout_below="@+id/eT_dominio"
        android:layout_alignEnd="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/l_extension"
        android:id="@+id/textView5"
        android:layout_alignBottom="@+id/textView4"
        android:layout_toEndOf="@+id/eT_dominio" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b_crear_usuario"
        android:id="@+id/b_aceptar"
        android:layout_below="@+id/textView4"
        android:layout_toStartOf="@+id/eT_dominio"
        android:layout_marginTop="208dp"
        android:onClick="Crear_usuario" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/l_contraseña"
        android:id="@+id/textView6"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/textView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/eT_contraseña"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/eT_usuario2"
        android:width="400dp" />

</RelativeLayout>
